--- a/notebooks/test_dash_app.ipynb
+++ b/notebooks/test_dash_app.ipynb
@@ -10,17 +10,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a272f0da-9e01-4e10-a83f-2241f073fc32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (1.3.4)\n",
+      "Requirement already satisfied: matplotlib in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (3.5.0)\n",
+      "Requirement already satisfied: noos-pyk in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (0.0.7)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (1.21.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (8.4.0)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
+      "Requirement already satisfied: setuptools-scm>=4 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (6.3.2)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (4.28.2)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
+      "Requirement already satisfied: requests in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from noos-pyk) (2.26.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "Requirement already satisfied: tomli>=1.0.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib) (1.2.2)\n",
+      "Requirement already satisfied: setuptools in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib) (58.4.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (1.26.7)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (3.3)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (2.0.8)\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip install pandas matplotlib noos-pyk ipywidgets"
+    "!pip install pandas matplotlib noos-pyk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1434e219-13d2-4b4d-92ac-0f719f06242b",
    "metadata": {},
    "outputs": [],
@@ -35,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5cf456ca-5e42-4e33-a3fa-0d7969a58001",
    "metadata": {},
    "outputs": [],
@@ -62,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c8405c3c-d203-40ae-b096-cffe4fbe4a45",
    "metadata": {},
    "outputs": [],
@@ -76,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4b1f2c02-b5c0-4f54-89b7-47ebf90dd474",
    "metadata": {},
    "outputs": [],
@@ -95,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f3ba63e6-b681-41cc-ae48-47b421a470b9",
    "metadata": {},
    "outputs": [],
@@ -116,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c637c708-4f42-47d8-bc33-2bedabec1897",
    "metadata": {},
    "outputs": [],
@@ -150,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "81e86364-07e4-4762-b226-cbf7d111f90f",
    "metadata": {},
    "outputs": [],
@@ -184,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b44ce032-c68e-48a6-ab67-217de6d7b4a5",
    "metadata": {},
    "outputs": [],
@@ -209,35 +237,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "e7a1d3df-f286-47d3-b1b6-b54877acd4e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dash import dcc\n",
     "from dash import html\n",
-    "from dash import dash_table\n",
-    "\n",
+    "import dash_dangerously_set_inner_html as raw_html\n",
     "import dash_mdc_neptune as mdc\n",
     "\n",
     "\n",
-    "table = dash_table.DataTable(\n",
-    "    id=\"table\",\n",
-    "    columns=[{\"name\": i, \"id\": i} for i in df_latest_da.columns],\n",
-    "    data=df_latest_da.to_dict(\"records\"),\n",
-    ")\n",
+    "canvas_style = {\n",
+    "    \"display\": 'grid',\n",
+    "    \"gridTemplateColumns\": \"2fr 4fr\",\n",
+    "    \"gap\": 2,\n",
+    "    \"gridTemplateRows\": \"auto\",\n",
+    "    \"gridTemplateAreas\": \"table graph\",\n",
+    "}\n",
     "\n",
-    "paper = mdc.Paper(id=\"paper\", children=[dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig), table])\n",
+    "table = html.Div(children=raw_html.DangerouslySetInnerHTML(df_styler.to_html()))\n",
+    "table_paper = mdc.Paper(id=\"table_paper\", children=[table])\n",
+    "table_box = mdc.Box(id=\"table_box\", sx={\"gridArea\": \"table\"}, children=[table_paper])\n",
     "\n",
-    "layout = html.Div(children=[paper])"
+    "graph = dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig, responsive=True)\n",
+    "graph_paper = mdc.Paper(id=\"graph_paper\", children=[graph])\n",
+    "graph_box = mdc.Box(id=\"graph_box\", sx={\"gridArea\": \"graph\"}, children=[graph_paper])\n",
+    "\n",
+    "canvas_box = mdc.Box(id=\"canvas_box\", sx=canvas_style, children=[table_box, graph_box])\n",
+    "\n",
+    "layout = html.Div(style={'backgroundColor': themes.NOOS_HTML_COLORS[\"primary\"]}, children=[canvas_box])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9d4724e6-87d8-4ca7-aced-f21b1f5faeb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
+      "\n",
+      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "\n",
