Use dashboard and navbar into the sample notebook

--- a/notebooks/test_dash_app.ipynb
+++ b/notebooks/test_dash_app.ipynb
@@ -10,45 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a272f0da-9e01-4e10-a83f-2241f073fc32",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (1.3.4)\n",
-      "Requirement already satisfied: matplotlib in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (3.5.0)\n",
-      "Requirement already satisfied: noos-pyk in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (0.0.7)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (1.21.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from pandas) (2021.3)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (8.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (3.0.6)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (21.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (0.11.0)\n",
-      "Requirement already satisfied: setuptools-scm>=4 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (6.3.2)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (4.28.2)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from matplotlib) (1.3.2)\n",
-      "Requirement already satisfied: requests in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from noos-pyk) (2.26.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
-      "Requirement already satisfied: tomli>=1.0.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib) (1.2.2)\n",
-      "Requirement already satisfied: setuptools in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from setuptools-scm>=4->matplotlib) (58.4.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (1.26.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages (from requests->noos-pyk) (2.0.8)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install pandas matplotlib noos-pyk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1434e219-13d2-4b4d-92ac-0f719f06242b",
    "metadata": {},
    "outputs": [],
@@ -63,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5cf456ca-5e42-4e33-a3fa-0d7969a58001",
    "metadata": {},
    "outputs": [],
@@ -90,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c8405c3c-d203-40ae-b096-cffe4fbe4a45",
    "metadata": {},
    "outputs": [],
@@ -104,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4b1f2c02-b5c0-4f54-89b7-47ebf90dd474",
    "metadata": {},
    "outputs": [],
@@ -123,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f3ba63e6-b681-41cc-ae48-47b421a470b9",
    "metadata": {},
    "outputs": [],
@@ -144,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c637c708-4f42-47d8-bc33-2bedabec1897",
    "metadata": {},
    "outputs": [],
@@ -178,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "81e86364-07e4-4762-b226-cbf7d111f90f",
    "metadata": {},
    "outputs": [],
@@ -212,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b44ce032-c68e-48a6-ab67-217de6d7b4a5",
    "metadata": {},
    "outputs": [],
@@ -237,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "e7a1d3df-f286-47d3-b1b6-b54877acd4e2",
    "metadata": {},
    "outputs": [],
@@ -257,35 +229,26 @@
     "}\n",
     "\n",
     "table = html.Div(children=raw_html.DangerouslySetInnerHTML(df_styler.to_html()))\n",
-    "table_paper = mdc.Paper(id=\"table_paper\", children=[table])\n",
-    "table_box = mdc.Box(id=\"table_box\", sx={\"gridArea\": \"table\"}, children=[table_paper])\n",
+    "table_paper = mdc.Paper(children=[table])\n",
+    "table_box = mdc.Box(sx={\"gridArea\": \"table\"}, children=[table_paper])\n",
     "\n",
     "graph = dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig, responsive=True)\n",
-    "graph_paper = mdc.Paper(id=\"graph_paper\", children=[graph])\n",
-    "graph_box = mdc.Box(id=\"graph_box\", sx={\"gridArea\": \"graph\"}, children=[graph_paper])\n",
+    "graph_paper = mdc.Paper(children=[graph])\n",
+    "graph_box = mdc.Box(sx={\"gridArea\": \"graph\"}, children=[graph_paper])\n",
     "\n",
-    "canvas_box = mdc.Box(id=\"canvas_box\", sx=canvas_style, children=[table_box, graph_box])\n",
+    "canvas_box = mdc.Box(sx=canvas_style, children=[table_box, graph_box])\n",
     "\n",
-    "layout = html.Div(style={'backgroundColor': themes.NOOS_HTML_COLORS[\"primary\"]}, children=[canvas_box])"
+    "navbar = mdc.NavBar(title=\"Day-ahead Auctions\")\n",
+    "\n",
+    "layout = mdc.Dashboard(children=[navbar, canvas_box])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "9d4724e6-87d8-4ca7-aced-f21b1f5faeb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/epieuchot/Checkouts/noos/dash-mdc-neptune/.venv/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "\n",
@@ -293,7 +256,7 @@
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='jupyterlab', port=8051)"
+    "app.run_server(mode='external', port=8051)"
    ]
   },
   {
