--- a/notebooks/test_dash_app.ipynb
+++ b/notebooks/test_dash_app.ipynb
@@ -220,27 +220,17 @@
     "import dash_mdc_neptune as mdc\n",
     "\n",
     "\n",
-    "canvas_style = {\n",
-    "    \"display\": 'grid',\n",
-    "    \"gridTemplateColumns\": \"2fr 4fr\",\n",
-    "    \"gap\": 2,\n",
-    "    \"gridTemplateRows\": \"auto\",\n",
-    "    \"gridTemplateAreas\": \"table graph\",\n",
-    "}\n",
-    "\n",
     "table = html.Div(children=raw_html.DangerouslySetInnerHTML(df_styler.to_html()))\n",
-    "table_paper = mdc.Paper(children=[table])\n",
-    "table_box = mdc.Box(sx={\"gridArea\": \"table\"}, children=[table_paper])\n",
+    "table_card = mdc.Card(children=table)\n",
+    "table_section = mdc.Section(children=table_card, size=3)\n",
     "\n",
     "graph = dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig, responsive=True)\n",
-    "graph_paper = mdc.Paper(children=[graph])\n",
-    "graph_box = mdc.Box(sx={\"gridArea\": \"graph\"}, children=[graph_paper])\n",
-    "\n",
-    "canvas_box = mdc.Box(sx=canvas_style, children=[table_box, graph_box])\n",
+    "graph_card = mdc.Card(children=graph)\n",
+    "graph_section = mdc.Section(children=graph_card, size=9)\n",
     "\n",
     "navbar = mdc.NavBar(title=\"Day-ahead Auctions\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, canvas_box])"
+    "layout = mdc.Dashboard(children=[navbar, table_section, graph_section])"
    ]
   },
   {
