Update notebooks with JSX components

--- a/notebooks/test_dash_app.ipynb
+++ b/notebooks/test_dash_app.ipynb
@@ -221,16 +221,17 @@
     "\n",
     "\n",
     "table = html.Div(children=raw_html.DangerouslySetInnerHTML(df_styler.to_html()))\n",
-    "table_card = mdc.Card(children=table)\n",
+    "table_card = mdc.Card(title=\"Latest\", children=table)\n",
     "table_section = mdc.Section(children=table_card, size=3)\n",
     "\n",
     "graph = dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig, responsive=True)\n",
-    "graph_card = mdc.Card(children=graph)\n",
+    "graph_card = mdc.Card(title=\"Last quarter\", children=graph)\n",
     "graph_section = mdc.Section(children=graph_card, size=9)\n",
     "\n",
+    "page = mdc.Page(children=[table_section, graph_section])\n",
     "navbar = mdc.NavBar(title=\"Day-ahead Auctions\")\n",
     "\n",
-    "layout = mdc.Dashboard(children=[navbar, table_section, graph_section])"
+    "layout = mdc.Dashboard(children=[navbar, page])"
    ]
   },
   {
