Update sample notebook with latest components

--- a/notebooks/test_dash_app.ipynb
+++ b/notebooks/test_dash_app.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pandas matplotlib noos-pyk"
+    "!pip install ipywidgets pandas matplotlib noos-pyk"
    ]
   },
   {
@@ -142,7 +142,7 @@
     "df_styler = df_latest_da.style\n",
     "df_styler = df_styler.hide_index()\n",
     "df_styler = df_styler.background_gradient(\n",
-    "    axis=0, gmap=df_latest_da[\"€/MWh\"], cmap=themes.matplotlib_templates.noos_diverging\n",
+    "    axis=0, gmap=df_latest_da[\"€/MWh\"], cmap=themes.matplotlib.noos_diverging\n",
     ")\n",
     "df_styler = df_styler.format({\"€/MWh\": \"{:,.2f}\", \"hour\": \"{:,.0f}\"})\n",
     "df_styler = df_styler.set_table_attributes(\"style='font-size: 0.8rem'\")"
@@ -228,7 +228,7 @@
     "graph_card = mdc.Card(title=\"Last quarter\", children=graph)\n",
     "graph_section = mdc.Section(children=graph_card, size=9)\n",
     "\n",
-    "page = mdc.Page(children=[table_section, graph_section])\n",
+    "page = mdc.Page(verticalLayout=\"fill\", children=[table_section, graph_section])\n",
     "navbar = mdc.NavBar(title=\"Day-ahead Auctions\")\n",
     "\n",
     "layout = mdc.Dashboard(children=[navbar, page])"
