--- a/notebooks/Day Ahead Auctions.ipynb
+++ b/notebooks/Day Ahead Auctions.ipynb
@@ -2,32 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting dash-dangerously-set-inner-html\n",
-      "  Downloading dash_dangerously_set_inner_html-0.0.2.tar.gz (5.0 kB)\n",
-      "Building wheels for collected packages: dash-dangerously-set-inner-html\n",
-      "  Building wheel for dash-dangerously-set-inner-html (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for dash-dangerously-set-inner-html: filename=dash_dangerously_set_inner_html-0.0.2-py3-none-any.whl size=4762 sha256=74f96a8312fdd0a1e4a0bde7e9b19f046c1f07496253ae2a7d36352afb52925e\n",
-      "  Stored in directory: /home/jovyan/.cache/pip/wheels/25/dc/4d/d63cc56587601413aa2e3654ea1bc0e8d7944c23b73bb56819\n",
-      "Successfully built dash-dangerously-set-inner-html\n",
-      "Installing collected packages: dash-dangerously-set-inner-html\n",
-      "Successfully installed dash-dangerously-set-inner-html-0.0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install dash-dangerously-set-inner-html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "parameters"
@@ -80,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "body"
@@ -189,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "help"
@@ -220,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "body"
@@ -317,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "body"
@@ -360,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "body"
@@ -403,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +406,7 @@
     "graph_card = mdc.Card(title=\"Last quarter\", children=graph)\n",
     "graph_section = mdc.Section(children=graph_card, size=9)\n",
     "\n",
-    "page = mdc.Page(verticalLayout=\"fill\", children=[table_section, graph_section])\n",
+    "page = mdc.Page(children=[table_section, graph_section])\n",
     "navbar = mdc.NavBar(title=\"Day-Ahead Auctions\")\n",
     "\n",
     "layout = mdc.Dashboard(children=[navbar, page])"
@@ -430,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +424,7 @@
     "app = JupyterDash(__name__)\n",
     "app.layout = layout\n",
     "\n",
-    "app.run_server(mode='jupyterlab', host=\"0.0.0.0\", port=8001)"
+    "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
    ]
   },
   {
