Allow displaying cards as tabs in dashboard sections

--- a/notebooks/Day Ahead Auctions.ipynb
+++ b/notebooks/Day Ahead Auctions.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: dash-dangerously-set-inner-html in /opt/conda/lib/python3.8/site-packages (0.0.2)\n"
+     ]
+    }
+   ],
    "source": [
     "! pip install dash-dangerously-set-inner-html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,23 +44,7 @@
     "TODAY = pd.to_datetime(dt.date.today(), utc=True)\n",
     "\n",
     "CURVE_UID = \"FWD_PWRTE_H_DA\"\n",
-    "PUBLISHED_AT = TODAY - pd.tseries.offsets.Day(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "parameters"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# Dashboard meta\n",
-    "\n",
-    "flex_title = \"DAY AHEAD AUCTIONS\"\n",
-    "flex_orientation = \"columns\""
+    "PUBLISHED_AT = TODAY - pd.tseries.offsets.Day(10)"
    ]
   },
   {
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,11 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "size=300"
-    ]
-   },
+   "metadata": {},
    "source": [
     "## SECTION 1"
    ]
@@ -119,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,12 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "body"
-    ]
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display table\n",
@@ -173,12 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "help"
-    ]
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display source\n",
@@ -192,19 +172,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "tags": [
-     "size=700",
-     "tabs"
-    ]
-   },
+   "metadata": {},
    "source": [
     "## SECTION 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,12 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "body"
-    ]
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display graph\n",
@@ -301,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,12 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "body"
-    ]
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display graph\n",
@@ -344,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,12 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "body"
-    ]
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display graph\n",
@@ -387,24 +350,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import jupyter_dash\n",
+    "\n",
+    "import dash_dangerously_set_inner_html as html\n",
     "from dash import dcc\n",
-    "from dash import html\n",
     "\n",
-    "import dash_dangerously_set_inner_html\n",
-    "import dash_mdc_neptune as mdc\n",
+    "import dash_mdc_neptune as mdc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = html.DangerouslySetInnerHTML(df_styler.to_html())\n",
+    "table_section = mdc.Section(\n",
+    "    id=\"section-table\",\n",
+    "    size=3,\n",
+    "    children=table,\n",
+    "    options=[{\"title\": \"Latest\"}],\n",
+    ")\n",
     "\n",
-    "\n",
-    "table = dash_dangerously_set_inner_html.DangerouslySetInnerHTML(df_styler.to_html())\n",
-    "table_card = mdc.Card(title=\"Latest\", children=table)\n",
-    "table_section = mdc.Section(children=table_card, size=3)\n",
-    "\n",
-    "graph = dcc.Graph(id=\"quarterly-heatmap\", figure=qtd_fig, responsive=True)\n",
-    "graph_card = mdc.Card(title=\"Last quarter\", children=graph)\n",
-    "graph_section = mdc.Section(children=graph_card, size=9)\n",
+    "extras = {\n",
+    "    \"style\": {\"height\": \"100%\", \"width\": \"100%\"},\n",
+    "}\n",
+    "wtd_graph = dcc.Graph(\n",
+    "    id=\"weekly.heatmap\",\n",
+    "    figure=wtd_fig,\n",
+    "    **extras\n",
+    ")\n",
+    "mtd_graph = dcc.Graph(\n",
+    "    id=\"monthly.heatmap\",\n",
+    "    figure=mtd_fig,\n",
+    "    **extras\n",
+    ")\n",
+    "qtd_graph = dcc.Graph(\n",
+    "    id=\"quarterly.heatmap\",\n",
+    "    figure=qtd_fig,\n",
+    "    **extras\n",
+    ")\n",
+    "graph_tab = mdc.Tab(\n",
+    "    id=\"tab-graph\",\n",
+    "    children=[wtd_graph, mtd_graph, qtd_graph],\n",
+    "    options=[\n",
+    "        {\"label\": \"Last week\"},\n",
+    "        {\"label\": \"Last month\"},\n",
+    "        {\"label\": \"Last quarter\"},\n",
+    "    ],\n",
+    ")\n",
+    "graph_section = mdc.Section(\n",
+    "    id=\"section-graph\",\n",
+    "    children=graph_tab,\n",
+    "    options=[{\"title\": \"To Date\"}],\n",
+    ")\n",
     "\n",
     "page = mdc.Page(children=[table_section, graph_section])\n",
     "navbar = mdc.NavBar(title=\"Day-Ahead Auctions\")\n",
@@ -414,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://0.0.0.0:8001/\n"
+     ]
+    }
+   ],
    "source": [
     "from jupyter_dash import JupyterDash\n",
     "\n",
