--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "attempted-secondary",
+   "id": "radio-destination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,26 +15,29 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "legislative-georgia",
+   "id": "advised-notification",
    "metadata": {},
    "outputs": [],
    "source": [
     "text = mdc.Typography(text=\"Content...\", component=\"p\", variant=\"body2\")\n",
     "text_2 = mdc.Typography(text=\"Other content...\", component=\"p\", variant=\"body2\")\n",
     "\n",
+    "tab = mdc.Tab(\n",
+    "    children=[text, text_2],\n",
+    "    options=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
+    ")\n",
+    "\n",
     "section_1 = mdc.Section(\n",
     "    id=\"section-1\",\n",
-    "    orientation=\"columns\",\n",
+    "    orientation=\"rows\",\n",
     "    children=[text, text_2],\n",
     "    options=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
     ")\n",
     "\n",
     "section_2 = mdc.Section(\n",
     "    id=\"section-2\",\n",
-    "    size=3,\n",
-    "    children=[text, text_2],\n",
-    "    orientation=\"rows\",\n",
-    "    options=[{\"title\": \"Card 2a\", \"size\": 4}, {\"title\": \"Card 2b\"}]\n",
+    "    children=tab,\n",
+    "    options=[{\"title\": \"Card 2\"}]\n",
     ")\n",
     "\n",
     "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
@@ -45,10 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "complicated-territory",
+   "execution_count": 4,
+   "id": "touched-holder",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning: The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
+      "  func()\n"
+     ]
+    }
+   ],
    "source": [
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
@@ -59,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reasonable-tracy",
+   "id": "cosmetic-amazon",
    "metadata": {},
    "outputs": [],
    "source": []
